--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <div class="row">
                 <div class="col-md-8 col-md-offset-2 text-center">
                     <h1 class="title">The Outcome Network</h1>
-                    <p>A Leader in Workforce Solutions and Behavior Supports.</p>
+                    <p>A Leader in Workforce Solutions and Behavior Support.</p>
                     <a href="#" class="btn btn-default btn-radius btn-outline white-border white-text fill-white">Read More</a>&nbsp;&nbsp; <a href="#" class="btn btn-default animated btn-radius theme-bg white-text">Purchase Now <i class="fa fa-cart-arrow-down" aria-hidden="true"></i></a>
                 </div>
             </div>
