--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <!-- Start Header Navigation -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu"> <i class="fa fa-bars"></i> </button>
-                <a class="navbar-brand" href="">
+                <a class="navbar-brand" href="index.html">
                     <img style="width: 150px" src="images/brand/logo-2.png" class="logo logo-display" alt="">
                     <img style="width: 150px" src="images/brand/logo-1.png" class="logo logo-scrolled" alt=""> </a>
             </div>
@@ -74,16 +74,16 @@
             <div class="collapse navbar-collapse" id="navbar-menu">
                 <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
                     <li class="active ">
-                        <a href="" >Home</a>
+                        <a href="index.html" >Home</a>
                     </li>
                     <li class="dropdown">
                         <a href="" class="dropdown-toggle" data-toggle="dropdown">Our Story</a>
                         <ul class="dropdown-menu">
-                           <li><a href="">Mission</a></li>
-                           <li><a href="">How Are We Unique</a></li>
-                           <li><a href="">Culture</a></li>
-                           <li><a href="">Leadership Team</a></li>
-                           <li><a href="">Joint Commission</a></li>
+                           <li><a href="mission.html">Mission</a></li>
+                           <li><a href="unique.html">How Are We Unique</a></li>
+                           <li><a href="culture.html">Culture</a></li>
+                           <li><a href="team.html">Leadership Team</a></li>
+                           <li><a href="joint_commision.html">Joint Commission</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -109,7 +109,7 @@
                         </ul>
                     </li>
                      <li class="">
-                        <a href="" >Contact Us</a>
+                        <a href="contact.html" >Contact Us</a>
                     </li>
                 </ul>
             </div>
@@ -151,8 +151,8 @@
             <div class="row">
                 <div class="col-md-8 col-md-offset-2 text-center">
                     <h1 class="title">The Outcome Network</h1>
-                    <p>A Leader in Workforce Solutions and Behavior Support.</p>
-                    <a href="#" class="btn btn-default btn-radius btn-outline white-border white-text fill-white">Read More</a>&nbsp;&nbsp; <a href="#" class="btn btn-default animated btn-radius theme-bg white-text">Purchase Now <i class="fa fa-cart-arrow-down" aria-hidden="true"></i></a>
+                    <p>A Leader in Workforce Solutions and Behavior Supports.</p>
+                    <a href="#" class="btn btn-default btn-radius btn-outline white-border white-text fill-white">Read More</a>&nbsp;&nbsp; <a href="#" class="btn btn-default animated btn-radius theme-bg white-text">Submit Resume <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
                 </div>
             </div>
         </div>
@@ -179,7 +179,7 @@
                         <li><a href="#">In a free hour</a></li>
                         <li><a href="#">Written by Cicero in 45 BC</a></li>
                     </ul>
-                    <a href="#" class="btn btn-default btn-radius fill-dark">Read More</a>
+                    <a href="mission.html" class="btn btn-default btn-radius fill-dark">Read More</a>
                 </div>
                 <div class="col-sm-6">
                     <div class="video-info"> <img class="img-responsive center-block" src="images/corporate/image1.jpg" alt="" /> <a class="popup-vimeo video-btn theme-bg" title="Video" href="video/video.mp4"><i class="icon-control-play icons"></i></a> </div>
@@ -465,7 +465,7 @@
                             <div class="divider"></div>
                         </div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore</p>
-                        <a href="#" class="btn btn-default btn-radius btn-outline white-border white-text fill-white btn-xs">View More</a>
+                        <a href="team.html" class="btn btn-default btn-radius btn-outline white-border white-text fill-white btn-xs">View More</a>
                     </div>
                 </div>
                 <div class="col-md-9 col-sm-12">
@@ -712,7 +712,7 @@
         <div class="footer-bottom">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-6">© 2017 Alidesigns All rights reserved</div>
+                    <div class="col-sm-6">© 2019 Alidesigns All rights reserved</div>
                     <div class="col-sm-6 text-right">
                         <ul class="list-unstyled list-inline footer-social">
                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
