--- a/services.html
+++ b/services.html
@@ -163,7 +163,7 @@
         <div class="container">
             <div class="row intro-title">
                 <div class="col-sm-8 col-md-offset-2 text-center">
-                    <h1 class="title">A Leader in Workforce Solutions and Behavior Supports</h1>
+                    <h1 class="title">A Leader in Workforce Solutions and Behavior Support</h1>
                 </div>
             </div>
         </div>
